--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,58 @@
+@article{Amato2021,
+  doi = {10.1136/tsaco-2021-000719},
+  url = {https://doi.org/10.1136/tsaco-2021-000719},
+  year = {2021},
+  month = nov,
+  publisher = {{BMJ}},
+  volume = {6},
+  number = {1},
+  pages = {e000719},
+  author = {Stas Amato and Levi Bonnell and Monali Mohan and Nobhojit Roy and Ajai Malhotra},
+  title = {Comparing trauma mortality of injured patients in India and the {USA}: a risk-adjusted analysis},
+  journal = {Trauma Surgery {\&} Acute Care Open}
+}
+
+@article{Sarang2021,
+  doi = {10.1007/s00268-021-06293-z},
+  url = {https://doi.org/10.1007/s00268-021-06293-z},
+  year = {2021},
+  month = aug,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {45},
+  number = {12},
+  pages = {3567--3574},
+  author = {Bhakti Sarang and Nakul Raykar and Anita Gadgil and Gunjan Mishra and Martin Gerdin W\"{a}rnberg and Amulya Rattan and Monty Khajanchi and Kapil Dev Soni and Monali Mohan and Naveen Sharma and Vineet Kumar and Deepa KV and Nobhojit Roy and},
+  title = {Outcomes of Renal Trauma in Indian Urban Tertiary Healthcare Centres: A Multicentre Cohort Study},
+  journal = {World Journal of Surgery}
+}
+
+@article{WrnbergGerdin2020,
+  doi = {10.1136/bmjopen-2019-032900},
+  url = {https://doi.org/10.1136/bmjopen-2019-032900},
+  year = {2020},
+  month = feb,
+  publisher = {{BMJ}},
+  volume = {10},
+  number = {2},
+  pages = {e032900},
+  author = {Ludvig W\"{a}rnberg Gerdin and Monty Khajanchi and Vineet Kumar and Nobhojit Roy and Makhan Lal Saha and Kapil Dev Soni and Anurag Mishra and Jyoti Kamble and Nitin Borle and Chandrika Prasad Verma and Martin Gerdin W\"{a}rnberg},
+  title = {Comparison of emergency department trauma triage performance of clinicians and clinical prediction models: a cohort study in India},
+  journal = {{BMJ} Open}
+}
+
+@article{Sinha2020,
+  doi = {10.1186/s13017-020-00338-9},
+  url = {https://doi.org/10.1186/s13017-020-00338-9},
+  year = {2020},
+  month = oct,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {15},
+  number = {1},
+  author = {Yash Sinha and Monty U. Khajanchi and Ramlal P. Prajapati and Satish Dharap and Kapil Dev Soni and Vineet Kumar and Santosh Mahindrakar and Nobhojit Roy},
+  title = {Management of liver trauma in urban university hospitals in India: an observational multicentre cohort study},
+  journal = {World Journal of Emergency Surgery}
+}
+
 @article{Gupta2020,
   doi = {10.3171/2018.8.jns182182},
   url = {https://doi.org/10.3171/2018.8.jns182182},
@@ -10,6 +65,19 @@
   author = {Saksham Gupta and Monty Khajanchi and Vineet Kumar and Nakul P. Raykar and Blake C. Alkire and Nobhojit Roy and Kee B. Park},
   title = {Third delay in traumatic brain injury: time to management as a predictor of mortality},
   journal = {Journal of Neurosurgery}
+}
+
+@article{Gupta2019,
+  doi = {10.4103/jets.jets_76_18},
+  url = {https://doi.org/10.4103/jets.jets_76_18},
+  year = {2019},
+  publisher = {Medknow},
+  volume = {12},
+  number = {2},
+  pages = {128},
+  author = {Amit Gupta and KapilDev Soni and Santosh Mahindrakar and Gaurav Kaushik and Subodh Kumar and Sushma Sagar},
+  title = {Do the care process and survival chances differ in patients arriving to a level 1 Indian trauma center,  during-hours and after-hours?},
+  journal = {Journal of Emergencies,  Trauma,  and Shock}
 }
 
 @article{KizhakkeVeetil2019,
@@ -26,6 +94,33 @@
   journal = {Journal of Pediatric Surgery}
 }
 
+@article{Claeson2018,
+  doi = {10.1016/j.jss.2018.03.071},
+  url = {https://doi.org/10.1016/j.jss.2018.03.071},
+  year = {2018},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {229},
+  pages = {357--364},
+  author = {Alice Claeson and Mattias Sterner and Jonathan Attergrim and Monty Khajanchi and Vineet Kumar and Makhan lal Saha and Martin Gerdin W\"{a}rnberg},
+  title = {Assessment of the predictive value of the International Classification of Diseases Injury Severity Score for trauma mortality in urban India},
+  journal = {Journal of Surgical Research}
+}
+
+@article{Mansourati2018,
+  doi = {10.1002/bjs.10862},
+  url = {https://doi.org/10.1002/bjs.10862},
+  year = {2018},
+  month = apr,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {105},
+  number = {10},
+  pages = {1274--1282},
+  author = {M Mansourati and V Kumar and M Khajanchi and M L Saha and S Dharap and R Seger and M Gerdin W\"{a}rnberg},
+  title = {Mortality following surgery for trauma in an Indian trauma cohort},
+  journal = {British Journal of Surgery}
+}
+
 @article{Agrawal2018,
   doi = {10.4103/jets.jets_90_17},
   url = {https://doi.org/10.4103/jets.jets_90_17},
@@ -38,3 +133,151 @@
   title = {International classification of diseases-based audit of the injury database to understand the injury distribution in patients who have sustained a head injury (International Classification of Diseases Codes: S00-S09)},
   journal = {Journal of Emergencies,  Trauma,  and Shock}
 }
+
+@article{Bhandarkar2018,
+  doi = {10.29252/beat-060407},
+  url = {https://doi.org/10.29252/beat-060407},
+  year = {2018},
+  month = oct,
+  publisher = {Armenian Green Publishing Co.},
+  volume = {6},
+  number = {4},
+  pages = {313--317},
+  author = {Prashant Bhandarkar and Ashok Munivenkatappa and Nobhojit Roy and Vineet Kumar and Luis Rafael Moscote-Salazar and Amit Agrawal},
+  title = {Pattern and Distribution of Shock Index and Age Shock Index Score Among Trauma Patients in Towards Improved Trauma Care Outcomes ({TITCO}) Dataset},
+  journal = {Bulletin of Emergency and Trauma}
+}
+
+@article{Agrawal2018,
+  doi = {10.4103/jets.jets_70_17},
+  url = {https://doi.org/10.4103/jets.jets_70_17},
+  year = {2018},
+  publisher = {Medknow},
+  volume = {11},
+  number = {1},
+  pages = {10},
+  author = {Amit Agrawal and Prashant Bhandarkar and Ranabir Pal and Ashok Munivenkatappa and Nobhojit Roy and Vineet Kumar},
+  title = {Distribution of Laboratory Parameters in Trauma Population},
+  journal = {Journal of Emergencies,  Trauma,  and Shock}
+}
+
+@article{Attergrim2018,
+  doi = {10.1371/journal.pone.0199754},
+  url = {https://doi.org/10.1371/journal.pone.0199754},
+  year = {2018},
+  month = jun,
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {13},
+  number = {6},
+  pages = {e0199754},
+  author = {Jonatan Attergrim and Mattias Sterner and Alice Claeson and Satish Dharap and Amit Gupta and Monty Khajanchi and Vineet Kumar and Martin Gerdin W\"{a}rnberg},
+  editor = {Erin E. Fox},
+  title = {Predicting mortality with the international classification of disease injury severity score using survival risk ratios derived from an Indian trauma population: A cohort study},
+  journal = {{PLOS} {ONE}}
+}
+
+@article{Khajanchi2018,
+  doi = {10.1136/injuryprev-2018-042826},
+  url = {https://doi.org/10.1136/injuryprev-2018-042826},
+  year = {2018},
+  month = jun,
+  publisher = {{BMJ}},
+  volume = {25},
+  number = {5},
+  pages = {428--432},
+  author = {Monty Uttam Khajanchi and Vineet Kumar and Ludvig W\"{a}rnberg Gerdin and Kapil Dev Soni and Makhan Lal Saha and Nobhojit Roy and Martin Gerdin W\"{a}rnberg},
+  title = {Prevalence of a definitive airway in patients with~severe traumatic brain injury~received at four urban public university hospitals in India: a cohort study},
+  journal = {Injury Prevention}
+}
+
+@article{Agrawal2017,
+  doi = {10.4103/2229-5151.201950},
+  url = {https://doi.org/10.4103/2229-5151.201950},
+  year = {2017},
+  publisher = {Medknow},
+  volume = {7},
+  number = {1},
+  pages = {14},
+  author = {Amit Agrawal and Prashant Bhandarkar and Ashok Munivenkatappa and Nobhojit Roy and Vineet Kumar and VedaDhruthy Samudrala and Jyoti Kamble},
+  title = {On-admission blood pressure and pulse rate in trauma patients and their correlation with mortality: Cushing{\textquotesingle}s phenomenon revisited},
+  journal = {International Journal of Critical Illness and Injury Science}
+}
+
+@article{Soni2017,
+  doi = {10.1186/s41038-017-0087-7},
+  url = {https://doi.org/10.1186/s41038-017-0087-7},
+  year = {2017},
+  month = aug,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {5},
+  author = {Kapil Dev Soni and Santosh Mahindrakar and Amit Gupta and Subodh Kumar and Sushma Sagar and Ashish Jhakal},
+  title = {Comparison of {ISS},  {NISS},  and {RTS} score as predictor of mortality in pediatric fall},
+  journal = {Burns {\&} Trauma}
+}
+
+@article{Roy2017,
+  doi = {10.1186/s12913-017-2085-7},
+  url = {https://doi.org/10.1186/s12913-017-2085-7},
+  year = {2017},
+  month = feb,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {17},
+  number = {1},
+  author = {Nobhojit Roy and Deepa Kizhakke Veetil and Monty Uttam Khajanchi and Vineet Kumar and Harris Solomon and Jyoti Kamble and Debojit Basak and G\"{o}ran Tomson and Johan von Schreeb},
+  title = {Learning from 2523 trauma deaths in India- opportunities to prevent in-hospital deaths},
+  journal = {{BMC} Health Services Research}
+}
+
+@article{Dharap2017,
+  doi = {10.4103/0022-3859.201417},
+  url = {https://doi.org/10.4103/0022-3859.201417},
+  year = {2017},
+  publisher = {Medknow},
+  volume = {63},
+  number = {3},
+  pages = {169},
+  author = {SB Dharap and S Kamath and V Kumar},
+  title = {Does prehospital time affect survival of major trauma patients where there is no prehospital care?},
+  journal = {Journal of Postgraduate Medicine}
+}
+
+@article{Roy2016,
+  doi = {10.1007/s00268-016-3452-y},
+  url = {https://doi.org/10.1007/s00268-016-3452-y},
+  year = {2016},
+  month = feb,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {40},
+  number = {6},
+  pages = {1299--1307},
+  author = {Nobhojit Roy and Martin Gerdin and Samarendra Ghosh and Amit Gupta and Vineet Kumar and Monty Khajanchi and Eric B. Schneider and Russell Gruen and G\"{o}ran Tomson and Johan von Schreeb},
+  title = {30-Day In-hospital Trauma Mortality in Four Urban University Hospitals Using an Indian Trauma Registry},
+  journal = {World Journal of Surgery}
+}
+
+@article{Roy2016,
+  doi = {10.4103/0974-2700.179460},
+  url = {https://doi.org/10.4103/0974-2700.179460},
+  year = {2016},
+  publisher = {Medknow},
+  volume = {9},
+  number = {2},
+  pages = {90},
+  author = {Nobhojit Roy and Martin Gerdin and SamarendraNath Ghosh and Amit Gupta and MakhanLal Saha and Monty Khajanchi and SatishB Dharap and Deen Mohd Ismail and Johan von Schreeb},
+  title = {The Chennai consensus on in-hospital trauma care for India},
+  journal = {Journal of Emergencies,  Trauma,  and Shock}
+}
+
+@article{Gerdin2016,
+  doi = {10.1186/s12873-016-0079-0},
+  url = {https://doi.org/10.1186/s12873-016-0079-0},
+  year = {2016},
+  month = feb,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {16},
+  number = {1},
+  author = {Martin Gerdin and   and Nobhojit Roy and Monty Khajanchi and Vineet Kumar and Li Fell\"{a}nder-Tsai and Max Petzold and G\"{o}ran Tomson and Johan von Schreeb},
+  title = {Validation of a novel prediction model for early mortality in adult trauma patients in three public university hospitals in urban India},
+  journal = {{BMC} Emergency Medicine}
+}
+
