--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,16 @@
+@article{Soni2021,
+  doi = {10.1016/j.jcrc.2020.11.009},
+  url = {https://doi.org/10.1016/j.jcrc.2020.11.009},
+  year = {2021},
+  month = apr,
+  publisher = {Elsevier {BV}},
+  volume = {62},
+  pages = {31--37},
+  author = {Kapil Dev Soni and Monty Khajanchi and Nakul Raykar and Bhakti Sarang and Gerard M. O{\textquotesingle}Reilly and Satish Dharap and Peter Cameron and Naveen Sharma and Teresa Howard and Nathan Farrow and Nobhojit Roy},
+  title = {Does in-hospital trauma mortality in urban Indian academic centres differ between {\textquotedblleft}office-hours{\textquotedblright} and {\textquotedblleft}after-hours{\textquotedblright}?},
+  journal = {Journal of Critical Care}
+}
+
 @article{Amato2021,
   doi = {10.1136/tsaco-2021-000719},
   url = {https://doi.org/10.1136/tsaco-2021-000719},
@@ -276,8 +289,77 @@
   publisher = {Springer Science and Business Media {LLC}},
   volume = {16},
   number = {1},
-  author = {Martin Gerdin and   and Nobhojit Roy and Monty Khajanchi and Vineet Kumar and Li Fell\"{a}nder-Tsai and Max Petzold and G\"{o}ran Tomson and Johan von Schreeb},
+  author = {Martin Gerdin and Nobhojit Roy and Monty Khajanchi and Vineet Kumar and Li Fell\"{a}nder-Tsai and Max Petzold and G\"{o}ran Tomson and Johan von Schreeb},
   title = {Validation of a novel prediction model for early mortality in adult trauma patients in three public university hospitals in urban India},
   journal = {{BMC} Emergency Medicine}
 }
 
+@article{Roy2016,
+  doi = {10.1016/j.injury.2016.09.027},
+  url = {https://doi.org/10.1016/j.injury.2016.09.027},
+  year = {2016},
+  month = nov,
+  publisher = {Elsevier {BV}},
+  volume = {47},
+  number = {11},
+  pages = {2459--2464},
+  author = {Nobhojit Roy and Martin Gerdin and Eric Schneider and Deepa K. Kizhakke Veetil and Monty Khajanchi and Vineet Kumar and Makhal Lal Saha and Satish Dharap and Amit Gupta and G\"{o}ran Tomson and Johan von Schreeb},
+  title = {Validation of international trauma scoring systems in urban trauma centres in India},
+  journal = {Injury}
+}
+
+@article{Veetil2016,
+  doi = {10.1016/j.injury.2015.11.020},
+  url = {https://doi.org/10.1016/j.injury.2015.11.020},
+  year = {2016},
+  month = feb,
+  publisher = {Elsevier {BV}},
+  volume = {47},
+  number = {2},
+  pages = {510},
+  author = {Deepa Kizhakke Veetil and Jyoti Kamble and Debojit Basak and Nobhojit Roy},
+  title = {Direct versus transferred severely injured: Different context,  similar findings},
+  journal = {Injury}
+}
+
+@article{KizhakkeVeetil2016,
+  doi = {10.1016/j.injury.2015.10.018},
+  url = {https://doi.org/10.1016/j.injury.2015.10.018},
+  year = {2016},
+  month = feb,
+  publisher = {Elsevier {BV}},
+  volume = {47},
+  number = {2},
+  pages = {508--509},
+  author = {Deepa Kizhakke Veetil and Deen Mohamad Ismail and Nobhojit Roy and Monty Uttam Khajanchi},
+  title = {Drink-driving: India slow on enforcement},
+  journal = {Injury}
+}
+
+@article{Gerdin2016,
+  doi = {10.1016/j.jclinepi.2016.01.004},
+  url = {https://doi.org/10.1016/j.jclinepi.2016.01.004},
+  year = {2016},
+  month = jun,
+  publisher = {Elsevier {BV}},
+  volume = {74},
+  pages = {177--186},
+  author = {Martin Gerdin and Nobhojit Roy and Li Fell\"{a}nder-Tsai and G\"{o}ran Tomson and Johan von Schreeb and Max Petzold and Amit Gupta and Ashish Jhakal and Debojit Basak and Deen Mohamed Ismail and Dusu Yabo and K. Jegadeesan and Jyoti Kamble and Makhan Lal Saha and Mangesh Nitnaware and Monty Khajanchi and Ranganathan Jothi and Samarendra Nath Ghosh and Sanjeev Bhoi and Santosh Mahindrakar and Satish Dharap and Shilpa Rao and Veera Kamal and Vineet Kumar and Santosh Tirlotkar},
+  title = {Traumatic transfers: calibration is adversely affected when prediction models are transferred between trauma care contexts in India and the United States},
+  journal = {Journal of Clinical Epidemiology}
+}
+
+@article{Gerdin2014,
+  doi = {10.1371/journal.pone.0090064},
+  url = {https://doi.org/10.1371/journal.pone.0090064},
+  year = {2014},
+  month = mar,
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {9},
+  number = {3},
+  pages = {e90064},
+  author = {Martin Gerdin and Nobhojit Roy and Satish Dharap and Vineet Kumar and Monty Khajanchi and G\"{o}ran Tomson and Li Fell\"{a}nder Tsai and Max Petzold and Johan von Schreeb},
+  editor = {Yu-Kang Tu},
+  title = {Early Hospital Mortality among Adult Trauma Patients Significantly Declined between 1998-2011: Three Single-Centre Cohorts from Mumbai,  India},
+  journal = {{PLoS} {ONE}}
+}
