--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -349,6 +349,19 @@
   journal = {Journal of Clinical Epidemiology}
 }
 
+@article{Kumar2015,
+  doi = {10.1016/s0140-6736(15)60819-4},
+  url = {https://doi.org/10.1016/s0140-6736(15)60819-4},
+  year = {2015},
+  month = apr,
+  publisher = {Elsevier {BV}},
+  volume = {385},
+  pages = {S24},
+  author = {Vineet Kumar and Monty Khajanchi and Nakul P Raykar and Martin Gerdin and Nobhojit Roy},
+  title = {Waiting at the hospital door: a prospective,  multicentre assessment of third delay in four tertiary hospitals in India},
+  journal = {The Lancet}
+}
+
 @article{Gerdin2014,
   doi = {10.1371/journal.pone.0090064},
   url = {https://doi.org/10.1371/journal.pone.0090064},
@@ -362,4 +375,33 @@
   editor = {Yu-Kang Tu},
   title = {Early Hospital Mortality among Adult Trauma Patients Significantly Declined between 1998-2011: Three Single-Centre Cohorts from Mumbai,  India},
   journal = {{PLoS} {ONE}}
+}
+
+@article{Gerdin2014,
+  doi = {10.1371/journal.pone.0105606},
+  url = {https://doi.org/10.1371/journal.pone.0105606},
+  year = {2014},
+  month = sep,
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {9},
+  number = {9},
+  pages = {e105606},
+  author = {Martin Gerdin and Nobhojit Roy and Monty Khajanchi and Vineet Kumar and Satish Dharap and Li Fell\"{a}nder-Tsai and Max Petzold and Sanjeev Bhoi and Makhan Lal Saha and Johan von Schreeb},
+  editor = {Chiara Lazzeri},
+  title = {Predicting Early Mortality in Adult Trauma Patients Admitted to Three Public University Hospitals in Urban India: A Prospective Multicentre Cohort Study},
+  journal = {{PLoS} {ONE}}
+}
+
+@article{Khajanchi2012,
+  doi = {10.1007/s00268-012-1785-8},
+  url = {https://doi.org/10.1007/s00268-012-1785-8},
+  year = {2012},
+  month = sep,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {37},
+  number = {3},
+  pages = {705--706},
+  author = {Monty U. Khajanchi and Vineet Kumar and Martin Gerdin and Nobhojit Roy},
+  title = {Indians Fit the Asian Trauma Model},
+  journal = {World Journal of Surgery}
 }
