--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -120,6 +120,20 @@
   journal = {Journal of Surgical Research}
 }
 
+@article{Sterner2018,
+  doi = {10.1177/1460408618789970},
+  url = {https://doi.org/10.1177/1460408618789970},
+  year = {2018},
+  month = sep,
+  publisher = {{SAGE} Publications},
+  volume = {21},
+  number = {4},
+  pages = {301--309},
+  author = {Mattias Sterner and Jonatan Attergrim and Alice Claeson and Vineet Kumar and Monty Khajanchi and Satish Dharap and Martin Gerdin},
+  title = {Both the multiplicative and single-worst-injury International Classification of Diseases Injury Severity Score underperform in urban Indian hospitals},
+  journal = {Trauma}
+}
+
 @article{Mansourati2018,
   doi = {10.1002/bjs.10862},
   url = {https://doi.org/10.1002/bjs.10862},
@@ -199,7 +213,7 @@
   number = {5},
   pages = {428--432},
   author = {Monty Uttam Khajanchi and Vineet Kumar and Ludvig W\"{a}rnberg Gerdin and Kapil Dev Soni and Makhan Lal Saha and Nobhojit Roy and Martin Gerdin W\"{a}rnberg},
-  title = {Prevalence of a definitive airway in patients with~severe traumatic brain injury~received at four urban public university hospitals in India: a cohort study},
+  title = {Prevalence of a definitive airway in patients with severe traumatic brain injury received at four urban public university hospitals in India: a cohort study},
   journal = {Injury Prevention}
 }
 
