Remove textquotes from publications

--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -17,8 +17,8 @@
   publisher = {Elsevier {BV}},
   volume = {62},
   pages = {31--37},
-  author = {Kapil Dev Soni and Monty Khajanchi and Nakul Raykar and Bhakti Sarang and Gerard M. O{\textquotesingle}Reilly and Satish Dharap and Peter Cameron and Naveen Sharma and Teresa Howard and Nathan Farrow and Nobhojit Roy},
-  title = {Does in-hospital trauma mortality in urban Indian academic centres differ between {\textquotedblleft}office-hours{\textquotedblright} and {\textquotedblleft}after-hours{\textquotedblright}?},
+  author = {Kapil Dev Soni and Monty Khajanchi and Nakul Raykar and Bhakti Sarang and Gerard M. O'Reilly and Satish Dharap and Peter Cameron and Naveen Sharma and Teresa Howard and Nathan Farrow and Nobhojit Roy},
+  title = {Does in-hospital trauma mortality in urban Indian academic centres differ between office-hours and after-hours?},
   journal = {Journal of Critical Care}
 }
 
