--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,9 +1,12 @@
-@article{Moghe2021,
+@article{Moghe2022,
   doi = {10.1016/j.burnso.2021.11.004},
   url = {https://doi.org/10.1016/j.burnso.2021.11.004},
-  year = {2021},
-  month = nov,
+  year = {2022},
+  month = jan,
   publisher = {Elsevier {BV}},
+  volume = {6},
+  number = {1},
+  pages = {51--55},
   author = {Dhanashree Moghe and Monty Khajanchi and Anita Gadgil and Martin Gerdin W\"{a}rnberg and Kapil Dev Soni and Monali Mohan and Roy Nobhojit},
   title = {Is sex an independent risk factor of in-hospital mortality in patients with burns? A multicentre cohort study from urban India},
   journal = {Burns Open}
