Use january as default month if no publication month is defined

--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -98,11 +98,12 @@
   doi = {10.4103/jets.jets_76_18},
   url = {https://doi.org/10.4103/jets.jets_76_18},
   year = {2019},
+  month = may,
   publisher = {Medknow},
   volume = {12},
   number = {2},
   pages = {128},
-  author = {Amit Gupta and KapilDev Soni and Santosh Mahindrakar and Gaurav Kaushik and Subodh Kumar and Sushma Sagar},
+  author = {Amit Gupta and Kapil Dev Soni and Santosh Mahindrakar and Gaurav Kaushik and Subodh Kumar and Sushma Sagar},
   title = {Do the care process and survival chances differ in patients arriving to a level 1 Indian trauma center,  during-hours and after-hours?},
   journal = {Journal of Emergencies,  Trauma,  and Shock}
 }
