--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,16 @@
+@article{Bavishi2022,
+  doi = {10.1016/j.amsu.2022.103564},
+  url = {https://doi.org/10.1016/j.amsu.2022.103564},
+  year = {2022},
+  month = jun,
+  publisher = {Elsevier {BV}},
+  volume = {78},
+  pages = {103564},
+  author = {Devi Bavishi and Monty Khajanchi and Ramlal Prajapati and Anita Gadgil and Bhakti Sarang and Kapil Dev Soni and Amay Banker and Dhanashree Moghe and Martin Gerdin W\"{a}rnberg},
+  title = {Management of pancreatic trauma in urban India: A multicenter study},
+  journal = {Annals of Medicine and Surgery}
+}
+
 @article{Moghe2022,
   doi = {10.1016/j.burnso.2021.11.004},
   url = {https://doi.org/10.1016/j.burnso.2021.11.004},
