--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,17 @@
+@article{Berg2022,
+  doi = {10.1136/bmjopen-2021-059948},
+  url = {https://doi.org/10.1136/bmjopen-2021-059948},
+  year = {2022},
+  month = jun,
+  publisher = {BMJ},
+  volume = {12},
+  number =  6,
+  pages = {e059948},
+  author = {Berg, Johanna and Alvesson, Helle Molsted and Roy, Nobhojit and Ekelund, Ulf and Bains, Lovenish and Chatterjee, Shamita and Bhattacharjee, Prosanta Kumar and David, Siddarth and Gupta, Swati and Kamble, Jyoti and Khajanchi, Monty and Lal, Pawanindra and Malhotra, Vikas and Meher, Ravi and Mishra, Anurag and Mohan, Lakshmeswar Nagaraj and Petzold, Max and Saxena, Ritu and Shrivastava, Prabhat and Singh, Rajdeep and Soni, Kapil Dev and Sural, Sumit and Gerdin W{\"a}rnberg, Martin},
+  title = {Perceived usefulness of trauma audit filters in urban India: a mixed-methods multicentre Delphi study comparing filters from the {WHO} and low and middle-income countries},
+  journal = {BMJ Open}
+}
+
 @article{Bavishi2022,
   doi = {10.1016/j.amsu.2022.103564},
   url = {https://doi.org/10.1016/j.amsu.2022.103564},
