--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -7,7 +7,7 @@
   volume = {12},
   number =  6,
   pages = {e059948},
-  author = {Berg, Johanna and Alvesson, Helle Molsted and Roy, Nobhojit and Ekelund, Ulf and Bains, Lovenish and Chatterjee, Shamita and Bhattacharjee, Prosanta Kumar and David, Siddarth and Gupta, Swati and Kamble, Jyoti and Khajanchi, Monty and Lal, Pawanindra and Malhotra, Vikas and Meher, Ravi and Mishra, Anurag and Mohan, Lakshmeswar Nagaraj and Petzold, Max and Saxena, Ritu and Shrivastava, Prabhat and Singh, Rajdeep and Soni, Kapil Dev and Sural, Sumit and Gerdin W{\"a}rnberg, Martin},
+  author = {Johanna Berg and Helle Molsted Alvesson and Nobhojit Roy and Ulf Ekelund and Lovenish Bains and Shamita Chatterjee and Prosanta Kumar Bhattacharjee and Siddarth David and Swati Gupta and Jyoti Kamble and Monty Khajanchi and Pawanindra Lal and Vikas Malhotra and Ravi Meher and Anurag Mishra and Lakshmeswar Nagaraj Mohan and Max Petzold and Ritu Saxena and Prabhat Shrivastava and Rajdeep Singh and Kapil Dev Soni and Sumit Sural and Martin Gerdin W\"{a}rnberg},
   title = {Perceived usefulness of trauma audit filters in urban India: a mixed-methods multicentre Delphi study comparing filters from the {WHO} and low and middle-income countries},
   journal = {BMJ Open}
 }
