--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,33 @@
+@article{Basak2022fall,
+  doi = {10.1016/j.injury.2022.09.048},
+  url = {https://doi.org/10.1016/j.injury.2022.09.048},
+  title = {Mortality from fall: A descriptive analysis of a multicenter Indian trauma registry},
+  author = {Debojit Basak and Aroke Anna Anthony and Niladri Banerjee and Santosh Rath and Shamita Chatterjee and Kapil Dev Soni and Naveen Sharma and Takahisa Ogawa and Gerard O'Reilly and Jonatan Attergrim and Martin Gerdin W\"{a}rnberg and Nobhojit Roy},
+  journal = Injury,
+  publisher = {Elsevier {BV}},
+  month = sep,
+  year =  {2022},
+  volume = {},
+  number = {},
+  pages = {},
+  keywords = {Fall; Traumatic brain injury}
+}
+
+@article{Basak2022gcs,
+  title = {Glasgow coma scale compared to other trauma scores in discriminating in-hospital mortality of traumatic brain injury patients admitted to urban Indian hospitals: A multicentre prospective cohort study,}
+  author = {Debojit Basak and Shamita Chatterjee and Jonatan Attergrim and Mohan Raj Sharma Kapil Dev Soni and Sukriti Verma and Martin Gerdin W\"{a}rnberg and Nobhojit Roy},
+  doi = {10.1016/j.injury.2022.09.035},
+  url = {https://doi.org/10.1016/j.injury.2022.09.035},
+  journal = Injury,
+  publisher = {Elsevier {BV}},
+  month = sep,
+  year =  {2022},
+  volume = {},
+  number = {},
+  pages = {},
+  keywords = {GAP; Glasgow coma scale; Kampala trauma score; MGAP; Revised trauma score; Traumatic brain injury}
+}
+
 @article{Berg2022,
   doi = {10.1136/bmjopen-2021-059948},
   url = {https://doi.org/10.1136/bmjopen-2021-059948},
