Start updating website

--- a/_publications/publications.bib
+++ b/_publications/publications.bib
@@ -1,3 +1,54 @@
+@article{chatterjee_mortality_2024,
+	title = {Mortality of {Critically} {Ill} {Trauma} {Patients} {Before} and {After} {Setting} {Up} of a {Dedicated} {Trauma} {Centre} in a {Tertiary} {Hospital} of {Eastern} {India}},
+	issn = {0973-9793},
+	url = {https://doi.org/10.1007/s12262-024-04169-9},
+	doi = {10.1007/s12262-024-04169-9},
+	language = {en},
+	urldate = {2024-10-19},
+	journal = {Indian Journal of Surgery},
+	author = {Shamita Chatterjee and Debojit Basak and Tamal Khan and Makhan Lal Saha and Kapil Dev Soni and Naveen Sharma and Martin Gerdin W\"{a}rnberg and Nobhojit Roy},
+	month = oct,
+	year = {2024},
+	keywords = {Mortality, Red triage, Trauma, Trauma system, Triage},
+}
+
+@article{soni_intubation_2024,
+	title = {Intubation and {In}-{Hospital} {Mortality} {After} {Trauma} {With} {Glasgow} {Coma} {Scale} {Score} {Eight} or {Less}–{A} {Cohort} {Study}},
+	volume = {299},
+	issn = {0022-4804, 1095-8673},
+	url = {https://www.journalofsurgicalresearch.com/article/S0022-4804(24)00183-5/fulltext},
+	doi = {10.1016/j.jss.2024.04.014},
+	language = {English},
+	urldate = {2024-10-19},
+	journal = {Journal of Surgical Research},
+	author = {Kapil Dev Soni and Varun Bansal and Monty Khajanchi and Deepa Kizhakke Veetil and Geoffrey Anderson and Nakul Raykar and Bhakti Sarang and Siddharth David and Martin Gerdin W\"{a}rnberg and Nobhojit Roy},
+	month = jul,
+	year = {2024},
+	pmid = {38761677},
+	note = {Publisher: Elsevier},
+	keywords = {Glasgow coma score, In-hospital mortality, Injury, Intubation, Trauma},
+	pages = {188--194},
+	file = {Full Text PDF:/Users/martin/Zotero/storage/65KBES3R/Soni et al. - 2024 - Intubation and In-Hospital Mortality After Trauma .pdf:application/pdf},
+}
+
+@article{anthony_profile_2023,
+	title = {Profile and triage validity of trauma patients triaged green: a prospective cohort study from a secondary care hospital in {India}},
+	volume = {13},
+	issn = {2044-6055, 2044-6055},
+	shorttitle = {Profile and triage validity of trauma patients triaged green},
+	url = {https://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2022-065036},
+	doi = {10.1136/bmjopen-2022-065036},
+	language = {en},
+	number = {5},
+	urldate = {2024-10-19},
+	journal = {BMJ Open},
+	author = {Anna Anthony and Rohini Dutta and Bhakti Sarang and Siddarth David and Gerard O'Reilly and Nakul Raykar and Monty Khajanchi and Jonatan Attergrim and Kapil Dev Soni and Naveen Sharma and Monali Mohan and Anita Gadgil and Nobhojit Roy and Martin Gerdin W\"{a}rnberg},
+	month = may,
+	year = {2023},
+	pages = {e065036},
+	file = {Full Text:/Users/martin/Zotero/storage/DGU2F65F/Anthony et al. - 2023 - Profile and triage validity of trauma patients tri.pdf:application/pdf},
+}
+
 @article{Basak2022fall,
   doi = {10.1016/j.injury.2022.09.048},
   url = {https://doi.org/10.1016/j.injury.2022.09.048},
@@ -7,9 +58,9 @@
   publisher = {Elsevier {BV}},
   month = sep,
   year =  {2022},
-  volume = {},
-  number = {},
-  pages = {},
+  volume = {53},
+  number = {12},
+  pages = {3956-3961},
   keywords = {Fall; Traumatic brain injury}
 }
 
@@ -22,9 +73,9 @@
   publisher = {Elsevier {BV}},
   month = sep,
   year =  {2022},
-  volume = {},
-  number = {},
-  pages = {},
+  volume = {54},
+  number = {1},
+  pages = {93-99},
   keywords = {GAP; Glasgow coma scale; Kampala trauma score; MGAP; Revised trauma score; Traumatic brain injury}
 }
 
@@ -35,7 +86,7 @@
   month = jun,
   publisher = {BMJ},
   volume = {12},
-  number =  6,
+  number = {6},
   pages = {e059948},
   author = {Johanna Berg and Helle Molsted Alvesson and Nobhojit Roy and Ulf Ekelund and Lovenish Bains and Shamita Chatterjee and Prosanta Kumar Bhattacharjee and Siddarth David and Swati Gupta and Jyoti Kamble and Monty Khajanchi and Pawanindra Lal and Vikas Malhotra and Ravi Meher and Anurag Mishra and Lakshmeswar Nagaraj Mohan and Max Petzold and Ritu Saxena and Prabhat Shrivastava and Rajdeep Singh and Kapil Dev Soni and Sumit Sural and Martin Gerdin W\"{a}rnberg},
   title = {Perceived usefulness of trauma audit filters in urban India: a mixed-methods multicentre Delphi study comparing filters from the {WHO} and low and middle-income countries},
